Banner fixes, css aligns

--- a/src/components/ui/Header/InternalTopHeader.less
+++ b/src/components/ui/Header/InternalTopHeader.less
@@ -85,7 +85,6 @@
       }
 
       .name {
-        display: flex;
         margin: auto 0px;
         padding: 0.3em;
       }
