--- a/src/components/ui/TopContainer/TopContainer.less
+++ b/src/components/ui/TopContainer/TopContainer.less
@@ -7,6 +7,10 @@
         flex: 1 0 auto;
     }
 
+    .banner {
+      background-color: @pension-orange-alpha;
+    }
+
     &.SAKSBEHANDLER {
         background-color: @white;
     }
